# personalengine

./: .gitignore  CMakeLists.txt  glad.c  lightshader.fs  lightshader.vs  main.cpp  shader.fs  shader.vs
include/: model.h  shader.h  shader_m.h  stb_image_aug.c  transform.h
include/glad/: glad.h
resources/objects/monkey/: untitled.mtl
src/: glad.c
